[package]
name = "your_plugin"
version = "0.0.1"
authors = ["Your Name <your email>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""
keywords = ["bevy"]
description = ""
exclude = ["assets", "examples", "tests", ".cargo"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.14", features = [], default-features = false }

[dev-dependencies]
bevy = { version = "0.14", features = [
    "dynamic_linking",
], default-features = false }

[features]
default = ["state"]
state = ["bevy/bevy_state"]
